--- a/index.html
+++ b/index.html
@@ -6,29 +6,35 @@
   <title>Sistema Industrial de Innovación — Lizarte</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
   <style>
+    /* Tema positivo: fondo claro, tipografía amigable, colores que transmiten confianza y crecimiento */
     :root {
-      --bg: #0a0e14;
-      --surface: #12171f;
-      --text: #e6edf3;
-      --text-muted: #9ca3af;
-      --accent: #58a6ff;
-      --accent-soft: rgba(88, 166, 255, 0.18);
-      --magenta: #e91e8c;
-      --magenta-soft: rgba(233, 30, 140, 0.2);
-      --cyan: #22d3ee;
-      --green: #34d399;
-      --border: #2d3548;
-      --success: #3fb950;
+      --bg: #f0f7ff;
+      --bg-gradient: linear-gradient(160deg, #f0f7ff 0%, #e8f4fc 40%, #f5f9fc 100%);
+      --surface: #ffffff;
+      --surface-soft: rgba(255, 255, 255, 0.9);
+      --text: #1e3a5f;
+      --text-muted: #475569;
+      --accent: #0d9488;
+      --accent-soft: rgba(13, 148, 136, 0.12);
+      --coral: #e85d4c;
+      --coral-soft: rgba(232, 93, 76, 0.15);
+      --magenta: #c73e6b;
+      --magenta-soft: rgba(199, 62, 107, 0.15);
+      --cyan: #0891b2;
+      --green: #059669;
+      --border: #e2e8f0;
+      --success: #10b981;
       --radius: 12px;
     }
 
     * { box-sizing: border-box; margin: 0; padding: 0; }
     html { scroll-behavior: smooth; }
     body {
-      font-family: 'Outfit', sans-serif;
-      background: var(--bg);
+      font-family: 'Plus Jakarta Sans', sans-serif;
+      background: var(--bg-gradient);
+      background-attachment: fixed;
       color: var(--text);
       line-height: 1.7;
       font-size: 1.05rem;
@@ -36,7 +42,7 @@
       position: relative;
     }
 
-    /* Fondo luces neón – estilo innovador */
+    /* Fondo: orbes suaves en tonos positivos (confianza + energía) */
     .neon-bg {
       position: fixed;
       inset: 0;
@@ -47,14 +53,14 @@
     .neon-orb {
       position: absolute;
       border-radius: 50%;
-      filter: blur(60px);
-      opacity: 0.65;
+      filter: blur(70px);
+      opacity: 0.5;
       animation: neon-pulse 8s ease-in-out infinite;
     }
     .neon-orb--1 {
       width: 450px;
       height: 450px;
-      background: radial-gradient(circle, rgba(233, 30, 140, 0.85) 0%, rgba(233, 30, 140, 0.2) 40%, transparent 70%);
+      background: radial-gradient(circle, rgba(8, 145, 178, 0.4) 0%, rgba(8, 145, 178, 0.08) 50%, transparent 70%);
       top: -120px;
       right: -100px;
       animation-delay: 0s;
@@ -62,7 +68,7 @@
     .neon-orb--2 {
       width: 400px;
       height: 400px;
-      background: radial-gradient(circle, rgba(34, 211, 238, 0.8) 0%, rgba(34, 211, 238, 0.2) 40%, transparent 70%);
+      background: radial-gradient(circle, rgba(5, 150, 105, 0.35) 0%, rgba(5, 150, 105, 0.06) 50%, transparent 70%);
       bottom: 10%;
       left: -120px;
       animation-delay: -2s;
@@ -70,7 +76,7 @@
     .neon-orb--3 {
       width: 320px;
       height: 320px;
-      background: radial-gradient(circle, rgba(233, 30, 140, 0.75) 0%, rgba(233, 30, 140, 0.15) 40%, transparent 70%);
+      background: radial-gradient(circle, rgba(232, 93, 76, 0.3) 0%, rgba(232, 93, 76, 0.05) 50%, transparent 70%);
       bottom: -80px;
       right: 15%;
       animation-delay: -4s;
@@ -78,7 +84,7 @@
     .neon-orb--4 {
       width: 380px;
       height: 380px;
-      background: radial-gradient(circle, rgba(34, 211, 238, 0.6) 0%, rgba(34, 211, 238, 0.15) 40%, transparent 70%);
+      background: radial-gradient(circle, rgba(13, 148, 136, 0.3) 0%, rgba(13, 148, 136, 0.06) 50%, transparent 70%);
       top: 40%;
       left: 50%;
       margin-left: -190px;
@@ -87,21 +93,19 @@
     }
     .neon-line {
       position: absolute;
-      background: linear-gradient(90deg, transparent, rgba(34, 211, 238, 0.25), transparent);
+      background: linear-gradient(90deg, transparent, rgba(8, 145, 178, 0.15), transparent);
       height: 2px;
       width: 100%;
       top: 30%;
       left: 0;
-      box-shadow: 0 0 20px rgba(34, 211, 238, 0.3);
     }
     .neon-line--2 {
-      background: linear-gradient(90deg, transparent, rgba(233, 30, 140, 0.22), transparent);
+      background: linear-gradient(90deg, transparent, rgba(5, 150, 105, 0.12), transparent);
       top: 65%;
-      box-shadow: 0 0 20px rgba(233, 30, 140, 0.25);
     }
     @keyframes neon-pulse {
-      0%, 100% { opacity: 0.55; }
-      50% { opacity: 0.8; }
+      0%, 100% { opacity: 0.4; }
+      50% { opacity: 0.6; }
     }
 
     .nav {
@@ -111,9 +115,10 @@
       right: 0;
       z-index: 100;
       padding: 0.65rem 1.25rem;
-      background: rgba(10, 14, 20, 0.85);
+      background: var(--surface-soft);
       backdrop-filter: blur(12px);
       border-bottom: 1px solid var(--border);
+      box-shadow: 0 1px 0 rgba(0,0,0,0.04);
       display: flex;
       align-items: center;
       justify-content: space-between;
@@ -175,7 +180,7 @@
       font-weight: 700;
       line-height: 1.2;
       margin-bottom: 0.5rem;
-      color: var(--magenta);
+      color: #0d9488;
     }
     .hero .sub { font-size: 1.2rem; color: var(--text-muted); max-width: 560px; margin: 0 auto 1rem; }
     .hero .scroll-hint {
@@ -191,8 +196,8 @@
       content: '';
       width: 20px;
       height: 20px;
-      border-right: 2px solid var(--magenta);
-      border-bottom: 2px solid var(--magenta);
+      border-right: 2px solid var(--cyan);
+      border-bottom: 2px solid var(--cyan);
       transform: rotate(45deg);
       animation: bounce 2s infinite;
     }
@@ -248,7 +253,7 @@
       bottom: 0;
       width: 100%;
       height: 2px;
-      background: linear-gradient(90deg, var(--cyan), var(--magenta));
+      background: linear-gradient(90deg, var(--cyan), var(--accent));
       border-radius: 1px;
     }
     section h3 { font-size: 1.25rem; font-weight: 600; margin: 1rem 0 0.5rem; color: var(--cyan); }
@@ -263,12 +268,13 @@
       border-radius: var(--radius);
       padding: 1rem 1.25rem;
       margin: 0.6rem 0;
+      box-shadow: 0 2px 12px rgba(0,0,0,0.04);
       opacity: 0;
       transform: translateX(-12px);
       transition: opacity 0.5s ease, transform 0.5s ease;
       cursor: pointer;
     }
-    .card:hover { background: rgba(18, 23, 31, 0.95); box-shadow: 0 4px 20px rgba(0,0,0,0.3); }
+    .card:hover { background: #fafbfc; box-shadow: 0 4px 20px rgba(0,0,0,0.08); }
     section.visible .card { opacity: 1; transform: translateX(0); }
     section.visible #principios .card:nth-child(2) { transition-delay: 0.05s; }
     section.visible #principios .card:nth-child(3) { transition-delay: 0.12s; }
@@ -288,12 +294,13 @@
       border-left: 3px solid var(--cyan);
       border-radius: var(--radius);
       font-size: 1.05rem;
+      box-shadow: 0 2px 12px rgba(0,0,0,0.04);
       opacity: 0;
       transform: translateY(10px);
       transition: opacity 0.4s ease, transform 0.4s ease;
       cursor: pointer;
     }
-    .goals-list li:hover { border-left-color: var(--magenta); background: rgba(18, 23, 31, 0.9); }
+    .goals-list li:hover { border-left-color: var(--magenta); background: rgba(255, 255, 255, 0.95); box-shadow: 0 2px 12px rgba(0,0,0,0.06); }
     section.visible .goals-list li { opacity: 1; transform: translateY(0); }
     section.visible .goals-list li:nth-child(1) { transition-delay: 0.05s; }
     section.visible .goals-list li:nth-child(2) { transition-delay: 0.12s; }
@@ -353,7 +360,7 @@
       .workstreams { grid-template-columns: 1fr; }
     }
     .ws { background: var(--surface); border: 1px solid var(--border); border-left: 3px solid var(--green); border-radius: var(--radius); padding: 0.9rem 1rem; cursor: pointer; transition: box-shadow 0.2s, background 0.2s; }
-    .ws:hover { background: rgba(18, 23, 31, 0.95); box-shadow: 0 4px 20px rgba(0,0,0,0.3); }
+    .ws:hover { background: #fafbfc; box-shadow: 0 4px 20px rgba(0,0,0,0.08); }
     .ws .ws-id { font-family: 'JetBrains Mono', monospace; font-size: 0.9rem; color: var(--cyan); margin-bottom: 0.3rem; }
     .ws h4 { font-size: 1.1rem; color: var(--text); margin-bottom: 0.4rem; }
     .ws p { margin: 0; font-size: 1rem; color: var(--text-muted); line-height: 1.55; }
@@ -370,7 +377,7 @@
       transition: opacity 0.5s ease, transform 0.5s ease, box-shadow 0.2s, background 0.2s;
       cursor: pointer;
     }
-    .gate:hover { background: rgba(18, 23, 31, 0.95); box-shadow: 0 4px 20px rgba(0,0,0,0.3); }
+    .gate:hover { background: #fafbfc; box-shadow: 0 4px 20px rgba(0,0,0,0.08); }
     section.visible .gate { opacity: 1; transform: translateY(0); }
     section.visible .gates .gate:nth-child(1) { transition-delay: 0.08s; }
     section.visible .gates .gate:nth-child(2) { transition-delay: 0.18s; }
@@ -386,7 +393,7 @@
     .goal-emoji { font-size: 1.2em; margin-right: 0.3rem; }
     .entregables-list { list-style: none; margin-left: 0; padding-left: 0; }
     .entregables-list li { display: flex; align-items: flex-start; gap: 0.5rem; margin-bottom: 0.55rem; font-size: 1.06rem; cursor: pointer; padding: 0.5rem 0.75rem; border-radius: var(--radius); transition: background 0.2s; }
-    .entregables-list li:hover { background: var(--surface); }
+    .entregables-list li:hover { background: rgba(255,255,255,0.8); }
     .entregables-list li::before { content: ''; flex-shrink: 0; }
     .hero-deco {
       display: flex;
@@ -435,7 +442,8 @@
     .zoom-overlay {
       position: fixed;
       inset: 0;
-      background: rgba(0, 0, 0, 0.85);
+      background: rgba(30, 58, 95, 0.4);
+      backdrop-filter: blur(6px);
       z-index: 1000;
       display: flex;
       align-items: center;
@@ -458,7 +466,7 @@
       max-height: 85vh;
       overflow-y: auto;
       position: relative;
-      box-shadow: 0 20px 60px rgba(0,0,0,0.5);
+      box-shadow: 0 20px 60px rgba(0,0,0,0.15);
       transform: scale(0.9);
       transition: transform 0.3s ease;
     }
@@ -490,7 +498,7 @@
       height: 2.5rem;
       border: none;
       background: var(--border);
-      color: var(--text);
+      color: var(--text-muted);
       font-size: 1.5rem;
       line-height: 1;
       border-radius: 50%;
