--- a/index.html
+++ b/index.html
@@ -603,7 +603,7 @@
 
   <section id="workstreams">
     <h2><span class="section-icon">🔀</span> 3. Workstreams</h2>
-    <p>📌 Siete líneas de trabajo para activar el sistema en 90 días:</p>
+    <p>📌 Seis líneas de trabajo para activar el sistema en 90 días:</p>
     <div class="workstreams">
       <div class="ws">
         <div class="ws-id">🔄 01</div>
@@ -634,11 +634,6 @@
         <div class="ws-id">🛠️ 06</div>
         <h4>WS5 — Herramientas y disciplina operativa</h4>
         <p>🛠️ Plantillas, tableros y trazabilidad para que el sistema sea repetible y gobernable.</p>
-      </div>
-      <div class="ws">
-        <div class="ws-id">📈 07</div>
-        <h4>WS6 — Habilitación progresiva del interlocutor y del Equipo Gestor (sin "curso", con práctica guiada)</h4>
-        <p>📈 Transferencia de capacidades prevista en el alcance: habilitar al Equipo Gestor y participantes para operar con autonomía progresiva.</p>
       </div>
     </div>
   </section>
